kustomize/dex/dex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex-ingress
  namespace: dex
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    description: "Ingress for Dex Identity Provider (v2.30.0). Host: dex.stillon.top"
  labels:
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: dex
    app.kubernetes.io/version: v2.30.0
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: dex
    app.kubernetes.io/managed-by: flux
spec:
  ingressClassName: nginx
  rules:
    - host: dex.stillon.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  number: 5556
  tls:
    - hosts:
      - dex.stillon.top
      secretName: dex-tls
